[gd_scene load_steps=9 format=2]

[ext_resource path="res://fonts/Acme-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://utils/AppearingText.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/finish_screen.gd" type="Script" id=3]
[ext_resource path="res://scenes/QuitOrPlay.gd" type="Script" id=4]
[ext_resource path="res://sound_effects/general/Volver_a_jugar.mp3" type="AudioStream" id=5]
[ext_resource path="res://sound_effects/general/Salir.mp3" type="AudioStream" id=6]

[sub_resource type="Theme" id=1]

[sub_resource type="DynamicFont" id=2]
size = 128
outline_size = 4
use_filter = true
font_data = ExtResource( 1 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 3 )

[node name="Polygon2D" type="Polygon2D" parent="."]
color = Color( 0.635294, 0.8, 0.854902, 1 )
polygon = PoolVector2Array( -36, -28, -34, 636, 1079, 633, 1074, -36 )

[node name="MainText1" type="CenterContainer" parent="." groups=["change_scene_2"]]
margin_left = -308.0
margin_top = -78.0
margin_right = 2020.0
margin_bottom = 583.0
grow_horizontal = 2
grow_vertical = 2
rect_scale = Vector2( 0.7, 0.7 )
theme = SubResource( 1 )

[node name="Label" type="Label" parent="MainText1"]
margin_left = 499.0
margin_top = 249.0
margin_right = 1828.0
margin_bottom = 412.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 2
size_flags_vertical = 2
custom_colors/font_color = Color( 0.109804, 0.184314, 0.670588, 1 )
custom_colors/font_outline_modulate = Color( 0.00784314, 0.00784314, 0.00784314, 1 )
custom_fonts/font = SubResource( 2 )
text = "¡¡Gracias por jugar a GIDI!!"
align = 1
valign = 1

[node name="Quit" type="CenterContainer" parent="." groups=["change_scene_2"]]
margin_left = 184.0
margin_top = 201.0
margin_right = 2512.0
margin_bottom = 862.0
grow_horizontal = 2
grow_vertical = 2
rect_scale = Vector2( 0.5, 0.5 )
theme = SubResource( 1 )
script = ExtResource( 4 )

[node name="Highlight" type="Polygon2D" parent="Quit"]
position = Vector2( 804, 200 )
scale = Vector2( 0.32, 0.35 )
color = Color( 0, 0.0156863, 1, 1 )
polygon = PoolVector2Array( -107.5, -168.75, -107.5, 896.25, 2360, 896.25, 2360, -168.75 )

[node name="Polygon2D" type="Polygon2D" parent="Quit"]
position = Vector2( 826, 220 )
scale = Vector2( 0.3, 0.3 )
polygon = PoolVector2Array( -107.5, -168.75, -107.5, 896.25, 2360, 896.25, 2360, -168.75 )

[node name="Label" type="Label" parent="Quit"]
margin_left = 1047.0
margin_top = 249.0
margin_right = 1280.0
margin_bottom = 412.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 2
size_flags_vertical = 2
custom_colors/font_color = Color( 0.109804, 0.184314, 0.670588, 1 )
custom_colors/font_outline_modulate = Color( 0.00784314, 0.00784314, 0.00784314, 1 )
custom_fonts/font = SubResource( 2 )
text = "Salir"
align = 1
valign = 1

[node name="Play" type="CenterContainer" parent="." groups=["change_scene_2"]]
margin_left = -313.0
margin_top = 201.0
margin_right = 2015.0
margin_bottom = 862.0
grow_horizontal = 2
grow_vertical = 2
rect_scale = Vector2( 0.5, 0.5 )
theme = SubResource( 1 )
script = ExtResource( 4 )

[node name="Highlight" type="Polygon2D" parent="Play"]
position = Vector2( 804, 200 )
scale = Vector2( 0.32, 0.35 )
color = Color( 0, 0.0156863, 1, 1 )
polygon = PoolVector2Array( -107.5, -168.75, -107.5, 896.25, 2360, 896.25, 2360, -168.75 )

[node name="Polygon2D2" type="Polygon2D" parent="Play"]
position = Vector2( 826, 220 )
scale = Vector2( 0.3, 0.3 )
polygon = PoolVector2Array( -107.5, -168.75, -107.5, 896.25, 2360, 896.25, 2360, -168.75 )

[node name="Label" type="Label" parent="Play"]
margin_left = 813.0
margin_top = 249.0
margin_right = 1514.0
margin_bottom = 412.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 2
size_flags_vertical = 2
custom_colors/font_color = Color( 0.109804, 0.184314, 0.670588, 1 )
custom_colors/font_outline_modulate = Color( 0.00784314, 0.00784314, 0.00784314, 1 )
custom_fonts/font = SubResource( 2 )
text = "Volver a jugar"
align = 1
valign = 1

[node name="AppearingText" parent="." instance=ExtResource( 2 )]

[node name="ReplayAudio" type="AudioStreamPlayer" parent="." groups=["options"]]
stream = ExtResource( 5 )
bus = "Voice"

[node name="QuitAudio" type="AudioStreamPlayer" parent="." groups=["options"]]
stream = ExtResource( 6 )
bus = "Voice"
